--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mnfst-starter-client",
+  "name": "whatsapp-leadgen-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.7",
     "p5": "^1.11.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
