--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,5 +9,12 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
+
+ARG REACT_APP_API_URL
+ARG WS_PORT
+
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV WS_PORT=$WS_PORT
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
