fix ws port env var

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,10 +6,12 @@ RUN npm install
 COPY . .
 
 ARG REACT_APP_API_URL
-ARG WS_PORT
+ARG REACT_APP_WS_PORT
 
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
-ENV WS_PORT=$WS_PORT
+ENV REACT_APP_WS_PORT=$REACT_APP_WS_PORT
+
+
 RUN npm run build
 
 # Production stage
