--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/whatsapp-leadgen-client:prod
         build-args: |
           REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
-          REACT_APP_WS_PORT=${{ secrets.REACT_APP_WS_PORT }}
+          REACT_APP_WS_URL=${{ secrets.REACT_APP_WS_URL }}
 
     - name: Build and push development Docker image
       uses: docker/build-push-action@v4
