--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,10 +7,11 @@ COPY . .
 
 ARG REACT_APP_API_URL
 ARG REACT_APP_WS_PORT
+ARG REACT_APP_WS_URL
 
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_WS_PORT=$REACT_APP_WS_PORT
-
+ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
 
 RUN npm run build
 
