--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,12 +6,12 @@ RUN npm install
 COPY . .
 
 ARG REACT_APP_API_URL
-ARG REACT_APP_WS_PORT
 ARG REACT_APP_WS_URL
+ARG REACT_APP_STRIPE_PUBLISHABLE_KEY
 
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
-ENV REACT_APP_WS_PORT=$REACT_APP_WS_PORT
 ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
+ENV REACT_APP_STRIPE_PUBLISHABLE_KEY=$REACT_APP_STRIPE_PUBLISHABLE_KEY
 
 RUN npm run build
 
