update dockerfile with args

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,11 +7,21 @@ COPY . .
 
 ARG REACT_APP_API_URL
 ARG REACT_APP_WS_URL
+
 ARG REACT_APP_STRIPE_PUBLISHABLE_KEY
+ARG REACT_APP_FULL_VERSION_PRODUCT_ID
+ARG REACT_APP_FREE_VERSION_PRODUCT_ID
+ARG REACT_APP_FULL_VERSION_PRICE_ID
+ARG REACT_APP_FREE_VERSION_PRICE_ID
+
 
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
 ENV REACT_APP_STRIPE_PUBLISHABLE_KEY=$REACT_APP_STRIPE_PUBLISHABLE_KEY
+ENV REACT_APP_FULL_VERSION_PRODUCT_ID=$REACT_APP_FULL_VERSION_PRODUCT_ID
+ENV REACT_APP_FREE_VERSION_PRODUCT_ID=$REACT_APP_FREE_VERSION_PRODUCT_ID
+ENV REACT_APP_FULL_VERSION_PRICE_ID=$REACT_APP_FULL_VERSION_PRICE_ID
+ENV REACT_APP_FREE_VERSION_PRICE_ID=$REACT_APP_FREE_VERSION_PRICE_ID
 
 RUN npm run build
 
